working on charts - bubble

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <a>Do Pobrania</a>
     </nav>
     <section>
+      <h5>*strona działa najlepiej na komputerach</h5>
       <h1>ElectoCanva* - Program wizualizacji danych</h1>
       <p>Aplikacja ta stanowi główną część projektu licencjackiego.</p>
       <p>
