--- a/wykresy.html
+++ b/wykresy.html
@@ -14,9 +14,11 @@
       <a>Do Pobrania</a>
     </nav>
     <section>
-      <h2>WykresMaxxing</h2>
+      <h2>Wykresy</h2>
       <main class="chartContainer">
         <canvas id="chart" aria-label="Data Chart Display" role="img"></canvas>
+        <div class="bubbleGradientDisplay"></div>
+        <p class="bubbleGradientDesc">kolory bąbelków (środek na biało)</p>
       </main>
       <menu>
         <label for="chartTypeSelect">Rodzaj wykresu:</label>
@@ -25,7 +27,6 @@
           <option value="line">Liniowy</option>
           <option value="bar">Słupkowy</option>
         </select>
-        <br />
         <label for="electionType">Rodzaj wyborów:</label>
         <select id="electionType">
           <option selected value="prezy">Prezydenckie</option>
@@ -36,15 +37,31 @@
           <option value="1">1 Tura</option>
           <option selected value="2">2 Tura</option>
         </select>
-        <br />
-        <label for="specificRegionCheckbox">Dane z konkretnego regionu</label>
-        <input type="checkbox" id="specificRegionCheckbox" />
-        <label for="adminType">Szukaj wśród:</label>
-        <select id="adminType">
-          <option value="gminy">gmin</option>
-          <option value="powiaty">powiatów</option>
-          <option value="wojewodztwa">województw</option>
-        </select>
+        <div class="lineDetails">
+          <label for="specificRegionCheckbox">Dane z konkretnego regionu</label>
+          <input type="checkbox" id="specificRegionCheckbox" />
+          <div class="specificRegionContainer">
+            <label for="lineAdminType">Szukaj wśród:</label>
+            <select id="lineAdminType">
+              <option value="gminy">gmin</option>
+              <option value="powiaty">powiatów</option>
+              <option value="wojewodztwa">województw</option>
+            </select>
+            <input type="text" id="terytInput" />
+          </div>
+        </div>
+        <div class="bubbleDetails">
+          <label for="bubbleAdminType">wyświetl:</label>
+          <select id="bubbleAdminType">
+            <option value="gminy">gminy</option>
+            <option selected value="powiaty">powiaty</option>
+            <option value="wojewodztwa">województwa</option>
+          </select>
+          <label>bezwzględna oś X</label>
+          <input checked type="checkbox" id="absoluteX" />
+          <label>bezwzględna oś Y</label>
+          <input checked type="checkbox" id="absoluteY" />
+        </div>
         <button id="refresh">Załaduj dane</button>
       </menu>
     </section>
