map analisys and comparison divided into two sections, info box reposition, making hud more clear

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <body>
     <nav>
       <a class="disabled">Strona Główna</a>
-      <a href="mapa.html">Mapa</a>
+      <a href="mapaAnaliza.html">Mapa - analizy</a>
+      <a href="mapaPorownanie.html">Mapa - porównania</a>
       <a href="wykresy.html">Wykresy</a>
-      <a>Do Pobrania</a>
+      <a href="dopobrania.html">Do Pobrania</a>
     </nav>
-    <section>
+    <main>
       <h5>*strona działa najlepiej na komputerach</h5>
-      <h1>ElectoCanva* - Program wizualizacji danych</h1>
+      <h1>ElectoCanva - Program wizualizacji danych</h1>
       <p>Aplikacja ta stanowi główną część projektu licencjackiego.</p>
       <p>
         Celem projektu jest aplikacja do przystępnej prezentacja danych
@@ -54,7 +55,6 @@
           dostępnego publicznie repozytorium na GitHubie </a
         >.
       </p>
-      <h6>*nazwa w.i.p.</h6>
-    </section>
+    </main>
   </body>
 </html>
