--- a/wykresy.html
+++ b/wykresy.html
@@ -9,12 +9,12 @@
   <body>
     <nav>
       <a href="index.html">Strona Główna</a>
-      <a href="mapa.html">Mapa</a>
+      <a href="mapaAnaliza.html">Mapa - analizy</a>
+      <a href="mapaPorownanie.html">Mapa - porównania</a>
       <a class="disabled">Wykresy</a>
-      <a>Do Pobrania</a>
+      <a href="dopobrania.html">Do Pobrania</a>
     </nav>
     <section>
-      <h2>Wykresy</h2>
       <main class="chartContainer">
         <canvas id="chart" aria-label="Data Chart Display" role="img"></canvas>
         <div class="bubbleGradientDisplay"></div>
